[package]
name = "mindroom_rebase_tests"
edition.workspace = true
publish = false

[lib]
path = "lib.rs"
bench = false

[dev-dependencies]
axum.workspace = true
base64.workspace = true
serde_json.workspace = true
tokio.workspace = true
tower.workspace = true
tuwunel = { path = "../main" }
tuwunel-api.workspace = true
tuwunel-core.workspace = true
tuwunel-service.workspace = true
url.workspace = true

[lints]
workspace = true
